--- a/modules/samples/pages/hello.adoc
+++ b/modules/samples/pages/hello.adoc
@@ -25,7 +25,7 @@ service : {
 }
 ```
 
-フロントエンド Canister である ``hello_assets`` は、引数のテキストボックスと、その引数で挨拶した関数を呼び出すためのボタンを持つ HTML ページを表示します。
+フロントエンド Canister である ``hello_assets`` は、引数入力のためのテキストボックスと、その引数で greet 関数を呼び出すためのボタンを持つ HTML ページを表示します。
 呼び出しの結果はメッセージボックスに表示されます。
 
 image:hello.png[hello フロントエンド]
