--- a/modules/samples/pages/hello.adoc
+++ b/modules/samples/pages/hello.adoc
@@ -9,7 +9,7 @@
 これは、よくある _hello world_ に相当する Dapp で、 https://6lqbm-ryaaa-aaaai-qibsa-cai.ic0.app/[IC 上のここで] 動作しているのを見ることができます。
 
 このサンプルは、以下の説明に従って `dfx new` を実行して作成されたデフォルトのプロジェクトに基づいています。
-link:../quickstart/local-quickstart{outfilesuffix}[Motoko] and
+link:../quickstart/local-quickstart{outfilesuffix}[Motoko] と
 link:../rust-guide/rust-quickstart{outfilesuffix}[Rust] のクイックスタートドキュメント。
 
 サンプルコードはこちらの github の
